# histo-example

./: CMakeLists.txt  README.md  histo1d-test.c  histogram1d.c  utils.c
include/: histgram1d.h  utils.h
src/: main.c
